just made the StandardApiIntegrationTest work with a writeEstimate/readEstimate pair of tests